k8s/namespace-configmaps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-service
  labels:
    name: weather-service
    environment: production
